HW5SERVER/tests/output/t15.out
lli: tmp.ll:56:22: error: use of undefined value '%va'
store i32 %t9 , i32* %va
                     ^
